--- a/user-profiles/solar/config.toml
+++ b/user-profiles/solar/config.toml
@@ -11,7 +11,7 @@ description = "Solar Flare"
 # Email address for security configuration
 email = "orange.hors@proton.me"
 # Selected desktop environment / window manager
-desktop = "plasma"  # Either "hyprland" or "plasma"
+desktop = "sway"  # Either "hyprland", "sway" or "plasma"
 
 # Theme settings are used both in system and user Stylix configurations
 [theme]
